crates/wac-parser/tests/resolution/fail/package-not-component.wac
package test:comp;

import foo: foo:bar/qux;